{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 25,
  "lineage": "47aaf63c-4dd6-ca33-3b3d-907fb5b35d5f",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-10-13T22:46:45.020-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proj-free-sept/global/firewalls/host-fw-allow-bastion",
            "log_config": [],
            "name": "host-fw-allow-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/proj-free-sept/global/networks/host-tmp-vpc",
            "priority": 1000,
            "project": "proj-free-sept",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proj-free-sept/global/firewalls/host-fw-allow-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-10-13T22:46:45.083-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proj-free-sept/global/firewalls/host-fw-allow-http",
            "log_config": [],
            "name": "host-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/proj-free-sept/global/networks/host-tmp-vpc",
            "priority": 1000,
            "project": "proj-free-sept",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proj-free-sept/global/firewalls/host-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-10-13T22:46:45.125-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proj-free-sept/global/firewalls/host-fw-allow-internal",
            "log_config": [],
            "name": "host-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/proj-free-sept/global/networks/host-tmp-vpc",
            "priority": 1000,
            "project": "proj-free-sept",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proj-free-sept/global/firewalls/host-fw-allow-internal",
            "source_ranges": [
              "10.26.1.0/24",
              "10.26.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "lb-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/proj-free-sept/global/networks/l7lb-test-network",
            "mtu": 0,
            "name": "l7lb-test-network",
            "project": "proj-free-sept",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proj-free-sept/global/networks/l7lb-test-network"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "new custom network",
            "id": "projects/proj-free-sept/global/networks/host-tmp-vpc",
            "mtu": 0,
            "name": "host-tmp-vpc",
            "project": "proj-free-sept",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proj-free-sept/global/networks/host-tmp-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-for-l7lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-10-13T22:46:45.974-07:00",
            "gateway_address": "10.26.5.1",
            "id": "projects/proj-free-sept/regions/us-central1/subnetworks/l7lb-test-subnetwork",
            "ip_cidr_range": "10.26.5.0/24",
            "name": "l7lb-test-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/proj-free-sept/global/networks/l7lb-test-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "proj-free-sept",
            "purpose": "INTERNAL_HTTPS_LOAD_BALANCER",
            "region": "us-central1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proj-free-sept/regions/us-central1/subnetworks/l7lb-test-subnetwork"
          },
          "dependencies": [
            "module.vpc.google_compute_network.lb-test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-10-13T22:46:46.092-07:00",
            "gateway_address": "10.26.1.1",
            "id": "projects/proj-free-sept/regions/us-central1/subnetworks/host-tmp-us-central1",
            "ip_cidr_range": "10.26.1.0/24",
            "name": "host-tmp-us-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/proj-free-sept/global/networks/host-tmp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "proj-free-sept",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proj-free-sept/regions/us-central1/subnetworks/host-tmp-us-central1"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-10-13T22:46:46.527-07:00",
            "gateway_address": "10.26.2.1",
            "id": "projects/proj-free-sept/regions/us-east4/subnetworks/host-tmp-us-east4",
            "ip_cidr_range": "10.26.2.0/24",
            "name": "host-tmp-us-east4",
            "network": "https://www.googleapis.com/compute/v1/projects/proj-free-sept/global/networks/host-tmp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "proj-free-sept",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proj-free-sept/regions/us-east4/subnetworks/host-tmp-us-east4"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}